Testing mp-open-api